/*
// required tools
$ go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28
$ go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2

// generate source
protoc --go_out=service_cardsets/pkg/grpc --go_opt=paths=source_relative \
--go-grpc_out=service_cardsets/pkg/grpc --go-grpc_opt=paths=source_relative \
service_cardsets/api/cardsets.proto

// direct call for testing
grpcurl -import-path ./service_cardsets/api -proto cardsets.proto -plaintext -format text -d 'sinceDate: "2006-01-02T15:04:05Z"' localhost:9090 cardsetsgrpc.CardSets.GetCardSets
*/

syntax = "proto3";

option go_package = "aglushkov.com/cardsetsgrpc";
option java_multiple_files = true;
option java_package = "io.grpc.cardsetsgrpc";
option java_outer_classname = "CardSetsProto";

package cardsetsgrpc;

service CardSets {
  rpc GetCardSets (GetCardSetsIn) returns (stream CardSet) {}
  rpc GetCardSetById (GetCardSetIn) returns (GetCardSetOut) {}
}

message GetCardSetsIn {
  optional string sinceDate = 1;
	optional int64 limit = 2;
}

message GetCardSetIn {
  string id = 1;
}

message GetCardSetOut {
  CardSet cardSet = 1;
}

message CardSet {
	string id = 1;
	string name = 2;
	repeated string tags = 3;
	repeated Card cards = 4;
	string userId = 5;
	string creationDate = 6;
	string modificationDate = 7;
	CardSetInfo info = 8;
	bool isAvailableInSearch = 9;
}

message CardSetInfo {
	string description = 1;
	optional string source = 2;
}

message Card {
	string id = 1;
	string term = 2;
	optional string transcription = 3;
	PartOfSpeech partOfSpeech = 4;
	repeated string definitions = 5;
	repeated string synonyms = 6;
	repeated string examples = 7;
	string userId = 8;
	string creationDate = 9;
	string modificationDate = 10;
	repeated string labels = 11;
}

enum PartOfSpeech {
	UNDEFINED = 0;
	NOUN = 1;
	VERB = 2;
	ADJECTIVE = 3;
	ADVERB = 4;
	PRONOUN = 5;
	PREPOSITION = 6;
	CONJUNCTION = 7;
	INTERJECTION = 8;
	ABBREVIATION = 9;
	EXCLAMATION = 10;
	DETERMINER = 11;
	PHRASALVERB = 12;
}
